fix issue with search buttons on mobile

--- a/assets/libdoc/css/custom.css
+++ b/assets/libdoc/css/custom.css
@@ -28,7 +28,7 @@
     width: 16px;
     background: url('data:image/svg+xml;utf8,<svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="%23666" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><line x1="18" y1="6" x2="6" y2="18"/><line x1="6" y1="6" x2="18" y2="18"/></svg>') center/contain no-repeat;
     cursor: pointer;
-    margin-right: 4px;
+    margin-right: 28px;
 }
 
 #libdoc-search-box::-webkit-search-cancel-button:hover {
